crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__function_declarations__native_1.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/function_declarations.rs
assertion_line: 30
expression: "goto_definition(r#\"\n%! main.sp\nnative int Foo(int bar);\n             |\n             ^\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 11
      },
      "end": {
        "line": 0,
        "character": 14
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 0,
        "character": 24
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 11
      },
      "end": {
        "line": 0,
        "character": 14
      }
    }
  }
]
